version/0.17/_sources/examples/legacy_pyaedt_integration/04_edb_parametrized_design.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\legacy_pyaedt_integration\04_edb_parametrized_design.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_legacy_pyaedt_integration_04_edb_parametrized_design.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_legacy_pyaedt_integration_04_edb_parametrized_design.py:


EDB: fully parametrized design
------------------------------
This example shows how you can use HFSS 3D Layout to create and solve a parametric design.

.. GENERATED FROM PYTHON SOURCE LINES 30-34

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform required imports, which includes importing the ``Hfss3dlayout`` object
and initializing it on version 2023 R2.

.. GENERATED FROM PYTHON SOURCE LINES 34-45

.. code-block:: Python


    import os

    from pyaedt import Hfss3dLayout

    import pyedb
    from pyedb.generic.general_methods import (
        generate_unique_folder_name,
        generate_unique_name,
    )








.. GENERATED FROM PYTHON SOURCE LINES 46-49

Set non-graphical mode
~~~~~~~~~~~~~~~~~~~~~~
Set non-graphical mode. The default is ``False``.

.. GENERATED FROM PYTHON SOURCE LINES 49-52

.. code-block:: Python


    non_graphical = False








.. GENERATED FROM PYTHON SOURCE LINES 53-56

Launch EDB
~~~~~~~~~~
Launch EDB.

.. GENERATED FROM PYTHON SOURCE LINES 56-61

.. code-block:: Python


    aedb_path = os.path.join(generate_unique_folder_name(), generate_unique_name("pcb") + ".aedb")
    print(aedb_path)
    edb = pyedb.Edb(edbpath=aedb_path, edbversion="2024.1")



.. rst-class:: sphx-glr-script-out

.. code-block:: pytb

    Traceback (most recent call last):
      File "C:\actions-runner\_work\pyedb\pyedb\examples\legacy_pyaedt_integration\04_edb_parametrized_design.py", line 59, in <module>
        edb = pyedb.Edb(edbpath=aedb_path, edbversion="2024.1")
      File "C:\actions-runner\_work\pyedb\pyedb\.venv\lib\site-packages\pyedb\generic\design_types.py", line 108, in Edb
        from pyedb.dotnet.edb import Edb as app
      File "C:\actions-runner\_work\pyedb\pyedb\.venv\lib\site-packages\pyedb\dotnet\edb.py", line 115, in <module>
        from pyedb.workflow import Workflow
      File "C:\actions-runner\_work\pyedb\pyedb\.venv\lib\site-packages\pyedb\workflow.py", line 4, in <module>
        import pandas as pd
    ModuleNotFoundError: No module named 'pandas'




.. GENERATED FROM PYTHON SOURCE LINES 62-65

Define parameters
~~~~~~~~~~~~~~~~~
Define the parameters.

.. GENERATED FROM PYTHON SOURCE LINES 65-85

.. code-block:: Python


    params = {
        "$ms_width": "0.4mm",
        "$sl_width": "0.2mm",
        "$ms_spacing": "0.2mm",
        "$sl_spacing": "0.1mm",
        "$via_spacing": "0.5mm",
        "$via_diam": "0.3mm",
        "$pad_diam": "0.6mm",
        "$anti_pad_diam": "0.7mm",
        "$pcb_len": "30mm",
        "$pcb_w": "5mm",
        "$x_size": "1.2mm",
        "$y_size": "1mm",
        "$corner_rad": "0.5mm",
    }

    for par_name in params:
        edb.add_project_variable(par_name, params[par_name])


.. GENERATED FROM PYTHON SOURCE LINES 86-89

Define stackup layers
~~~~~~~~~~~~~~~~~~~~~
Define the stackup layers from bottom to top.

.. GENERATED FROM PYTHON SOURCE LINES 89-114

.. code-block:: Python



    layers = [
        {"name": "bottom", "layer_type": "signal", "thickness": "35um", "material": "copper"},
        {"name": "diel_3", "layer_type": "dielectric", "thickness": "275um", "material": "FR4_epoxy"},
        {"name": "sig_2", "layer_type": "signal", "thickness": "35um", "material": "copper"},
        {"name": "diel_2", "layer_type": "dielectric", "thickness": "275um", "material": "FR4_epoxy"},
        {"name": "sig_1", "layer_type": "signal", "thickness": "35um", "material": "copper"},
        {"name": "diel_1", "layer_type": "dielectric", "thickness": "275um", "material": "FR4_epoxy"},
        {"name": "top", "layer_type": "signal", "thickness": "35um", "material": "copper"},
    ]

    # Create EDB stackup.
    # Bottom layer
    prev = None
    for layer in layers:
        edb.stackup.add_layer(
            layer["name"],
            base_layer=prev,
            layer_type=layer["layer_type"],
            thickness=layer["thickness"],
            material=layer["material"],
        )
        prev = layer["name"]


.. GENERATED FROM PYTHON SOURCE LINES 115-118

Create padstack for signal via
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Create a parametrized padstack for the signal via.

.. GENERATED FROM PYTHON SOURCE LINES 118-133

.. code-block:: Python


    signal_via_padstack = "automated_via"
    edb.padstacks.create(
        padstackname=signal_via_padstack,
        holediam="$via_diam",
        paddiam="$pad_diam",
        antipaddiam="",
        antipad_shape="Bullet",
        x_size="$x_size",
        y_size="$y_size",
        corner_radius="$corner_rad",
        start_layer=layers[-1]["name"],
        stop_layer=layers[-3]["name"],
    )


.. GENERATED FROM PYTHON SOURCE LINES 134-137

Assign net names
~~~~~~~~~~~~~~~~
# Assign net names. There are only two signal nets.

.. GENERATED FROM PYTHON SOURCE LINES 137-141

.. code-block:: Python


    net_p = "p"
    net_n = "n"


.. GENERATED FROM PYTHON SOURCE LINES 142-145

Place signal vias
~~~~~~~~~~~~~~~~~
Place signal vias.

.. GENERATED FROM PYTHON SOURCE LINES 145-248

.. code-block:: Python


    edb.padstacks.place(
        position=["$pcb_len/3", "($ms_width+$ms_spacing+$via_spacing)/2"],
        definition_name=signal_via_padstack,
        net_name=net_p,
        via_name="",
        rotation=90.0,
    )

    edb.padstacks.place(
        position=["2*$pcb_len/3", "($ms_width+$ms_spacing+$via_spacing)/2"],
        definition_name=signal_via_padstack,
        net_name=net_p,
        via_name="",
        rotation=90.0,
    )

    edb.padstacks.place(
        position=["$pcb_len/3", "-($ms_width+$ms_spacing+$via_spacing)/2"],
        definition_name=signal_via_padstack,
        net_name=net_n,
        via_name="",
        rotation=-90.0,
    )

    edb.padstacks.place(
        position=["2*$pcb_len/3", "-($ms_width+$ms_spacing+$via_spacing)/2"],
        definition_name=signal_via_padstack,
        net_name=net_n,
        via_name="",
        rotation=-90.0,
    )

    # ###############################################################################
    # Draw parametrized traces
    # ~~~~~~~~~~~~~~~~~~~~~~~~
    # Draw parametrized traces.
    # Trace the width and the routing (Microstrip-Stripline-Microstrip).
    # Applies to both p and n nets.

    width = ["$ms_width", "$sl_width", "$ms_width"]  # Trace width, n and p
    route_layer = [layers[-1]["name"], layers[4]["name"], layers[-1]["name"]]  # Routing layer, n and p

    # Define points for three traces in the "p" net

    points_p = [
        [
            ["0.0", "($ms_width+$ms_spacing)/2"],
            ["$pcb_len/3-2*$via_spacing", "($ms_width+$ms_spacing)/2"],
            ["$pcb_len/3-$via_spacing", "($ms_width+$ms_spacing+$via_spacing)/2"],
            ["$pcb_len/3", "($ms_width+$ms_spacing+$via_spacing)/2"],
        ],
        [
            ["$pcb_len/3", "($ms_width+$sl_spacing+$via_spacing)/2"],
            ["$pcb_len/3+$via_spacing", "($ms_width+$sl_spacing+$via_spacing)/2"],
            ["$pcb_len/3+2*$via_spacing", "($sl_width+$sl_spacing)/2"],
            ["2*$pcb_len/3-2*$via_spacing", "($sl_width+$sl_spacing)/2"],
            ["2*$pcb_len/3-$via_spacing", "($ms_width+$sl_spacing+$via_spacing)/2"],
            ["2*$pcb_len/3", "($ms_width+$sl_spacing+$via_spacing)/2"],
        ],
        [
            ["2*$pcb_len/3", "($ms_width+$ms_spacing+$via_spacing)/2"],
            ["2*$pcb_len/3+$via_spacing", "($ms_width+$ms_spacing+$via_spacing)/2"],
            ["2*$pcb_len/3+2*$via_spacing", "($ms_width+$ms_spacing)/2"],
            ["$pcb_len", "($ms_width+$ms_spacing)/2"],
        ],
    ]

    # Define points for three traces in the "n" net

    points_n = [
        [
            ["0.0", "-($ms_width+$ms_spacing)/2"],
            ["$pcb_len/3-2*$via_spacing", "-($ms_width+$ms_spacing)/2"],
            ["$pcb_len/3-$via_spacing", "-($ms_width+$ms_spacing+$via_spacing)/2"],
            ["$pcb_len/3", "-($ms_width+$ms_spacing+$via_spacing)/2"],
        ],
        [
            ["$pcb_len/3", "-($ms_width+$sl_spacing+$via_spacing)/2"],
            ["$pcb_len/3+$via_spacing", "-($ms_width+$sl_spacing+$via_spacing)/2"],
            ["$pcb_len/3+2*$via_spacing", "-($ms_width+$sl_spacing)/2"],
            ["2*$pcb_len/3-2*$via_spacing", "-($ms_width+$sl_spacing)/2"],
            ["2*$pcb_len/3-$via_spacing", "-($ms_width+$sl_spacing+$via_spacing)/2"],
            ["2*$pcb_len/3", "-($ms_width+$sl_spacing+$via_spacing)/2"],
        ],
        [
            ["2*$pcb_len/3", "-($ms_width+$ms_spacing+$via_spacing)/2"],
            ["2*$pcb_len/3 + $via_spacing", "-($ms_width+$ms_spacing+$via_spacing)/2"],
            ["2*$pcb_len/3 + 2*$via_spacing", "-($ms_width+$ms_spacing)/2"],
            ["$pcb_len", "-($ms_width + $ms_spacing)/2"],
        ],
    ]
    # ###############################################################################
    # Add traces to EDB
    # ~~~~~~~~~~~~~~~~~
    # Add traces to EDB.

    trace_p = []
    trace_n = []
    for n in range(len(points_p)):
        trace_p.append(edb.modeler.create_trace(points_p[n], route_layer[n], width[n], net_p, "Flat", "Flat"))
        trace_n.append(edb.modeler.create_trace(points_n[n], route_layer[n], width[n], net_n, "Flat", "Flat"))


.. GENERATED FROM PYTHON SOURCE LINES 249-252

Create wave ports
~~~~~~~~~~~~~~~~~
Create wave ports:

.. GENERATED FROM PYTHON SOURCE LINES 252-268

.. code-block:: Python


    edb.hfss.create_differential_wave_port(
        trace_p[0].id,
        ["0.0", "($ms_width+$ms_spacing)/2"],
        trace_n[0].id,
        ["0.0", "-($ms_width+$ms_spacing)/2"],
        "wave_port_1",
    )
    edb.hfss.create_differential_wave_port(
        trace_p[2].id,
        ["$pcb_len", "($ms_width+$ms_spacing)/2"],
        trace_n[2].id,
        ["$pcb_len", "-($ms_width + $ms_spacing)/2"],
        "wave_port_2",
    )


.. GENERATED FROM PYTHON SOURCE LINES 269-272

Draw ground polygons
~~~~~~~~~~~~~~~~~~~~
Draw ground polygons.

.. GENERATED FROM PYTHON SOURCE LINES 272-304

.. code-block:: Python


    gnd_poly = [[0.0, "-$pcb_w/2"], ["$pcb_len", "-$pcb_w/2"], ["$pcb_len", "$pcb_w/2"], [0.0, "$pcb_w/2"]]
    gnd_shape = edb.modeler.Shape("polygon", points=gnd_poly)

    # Void in ground for traces on the signal routing layer

    void_poly = [
        ["$pcb_len/3", "-($ms_width+$ms_spacing+$via_spacing+$anti_pad_diam)/2-$via_spacing/2"],
        ["$pcb_len/3 + $via_spacing", "-($ms_width+$ms_spacing+$via_spacing+$anti_pad_diam)/2-$via_spacing/2"],
        ["$pcb_len/3 + 2*$via_spacing", "-($ms_width+$ms_spacing+$via_spacing+$anti_pad_diam)/2"],
        ["2*$pcb_len/3 - 2*$via_spacing", "-($ms_width+$ms_spacing+$via_spacing+$anti_pad_diam)/2"],
        ["2*$pcb_len/3 - $via_spacing", "-($ms_width+$ms_spacing+$via_spacing+$anti_pad_diam)/2-$via_spacing/2"],
        ["2*$pcb_len/3", "-($ms_width+$ms_spacing+$via_spacing+$anti_pad_diam)/2-$via_spacing/2"],
        ["2*$pcb_len/3", "($ms_width+$ms_spacing+$via_spacing+$anti_pad_diam)/2+$via_spacing/2"],
        ["2*$pcb_len/3 - $via_spacing", "($ms_width+$ms_spacing+$via_spacing+$anti_pad_diam)/2+$via_spacing/2"],
        ["2*$pcb_len/3 - 2*$via_spacing", "($ms_width+$ms_spacing+$via_spacing+$anti_pad_diam)/2"],
        ["$pcb_len/3 + 2*$via_spacing", "($ms_width+$ms_spacing+$via_spacing+$anti_pad_diam)/2"],
        ["$pcb_len/3 + $via_spacing", "($ms_width+$ms_spacing+$via_spacing+$anti_pad_diam)/2+$via_spacing/2"],
        ["$pcb_len/3", "($ms_width+$ms_spacing+$via_spacing+$anti_pad_diam)/2+$via_spacing/2"],
        ["$pcb_len/3", "($ms_width+$ms_spacing+$via_spacing+$anti_pad_diam)/2"],
    ]

    void_shape = edb.modeler.Shape("polygon", points=void_poly)

    # Add ground layers

    for layer in layers[:-1:2]:
        # add void if the layer is the signal routing layer.
        void = [void_shape] if layer["name"] == route_layer[1] else []

        edb.modeler.create_polygon(main_shape=gnd_shape, layer_name=layer["name"], voids=void, net_name="gnd")


.. GENERATED FROM PYTHON SOURCE LINES 305-308

Plot EDB
~~~~~~~~
Plot EDB.

.. GENERATED FROM PYTHON SOURCE LINES 308-311

.. code-block:: Python


    edb.nets.plot(None)


.. GENERATED FROM PYTHON SOURCE LINES 312-315

Save EDB
~~~~~~~~
Save EDB.

.. GENERATED FROM PYTHON SOURCE LINES 315-319

.. code-block:: Python


    edb.save_edb()
    edb.close_edb()


.. GENERATED FROM PYTHON SOURCE LINES 320-323

Open EDB in AEDT
~~~~~~~~~~~~~~~~
Open EDB in AEDT.

.. GENERATED FROM PYTHON SOURCE LINES 323-328

.. code-block:: Python


    h3d = Hfss3dLayout(
        projectname=aedb_path, specified_version="2024.1", non_graphical=non_graphical, new_desktop_session=True
    )


.. GENERATED FROM PYTHON SOURCE LINES 329-332

Add HFSS simulation setup
~~~~~~~~~~~~~~~~~~~~~~~~~
Add HFSS simulation setup.

.. GENERATED FROM PYTHON SOURCE LINES 332-350

.. code-block:: Python


    setup = h3d.create_setup()
    setup.props["AdaptiveSettings"]["SingleFrequencyDataList"]["AdaptiveFrequencyData"]["MaxPasses"] = 3

    h3d.create_linear_count_sweep(
        setupname=setup.name,
        unit="GHz",
        freqstart=0,
        freqstop=10,
        num_of_freq_points=1001,
        sweepname="sweep1",
        sweep_type="Interpolating",
        interpolation_tol_percent=1,
        interpolation_max_solutions=255,
        save_fields=False,
        use_q3d_for_dc=False,
    )


.. GENERATED FROM PYTHON SOURCE LINES 351-354

Set Differential Pairs.
~~~~~~~~~~~~~~~~~~~~~~
Define the differential pairs to be used in the postprocessing.

.. GENERATED FROM PYTHON SOURCE LINES 354-357

.. code-block:: Python

    h3d.set_differential_pair(diff_name="In", positive_terminal="wave_port_1:T1", negative_terminal="wave_port_1:T2")
    h3d.set_differential_pair(diff_name="Out", positive_terminal="wave_port_2:T1", negative_terminal="wave_port_2:T2")


.. GENERATED FROM PYTHON SOURCE LINES 358-361

Start HFSS solver
~~~~~~~~~~~~~~~~~
Start the HFSS solver by uncommenting the ``h3d.analyze()`` command.

.. GENERATED FROM PYTHON SOURCE LINES 361-364

.. code-block:: Python


    h3d.analyze()


.. GENERATED FROM PYTHON SOURCE LINES 365-368

Generate Plot
~~~~~~~~~~~~~
Generate the plot of differential pairs.

.. GENERATED FROM PYTHON SOURCE LINES 368-374

.. code-block:: Python


    solutions = h3d.post.get_solution_data(["dB(S(In,In))", "dB(S(In,Out))"], context="Differential Pairs")
    solutions.plot()

    h3d.release_desktop()


.. GENERATED FROM PYTHON SOURCE LINES 375-379

Note that the ground nets are only connected to each other due
to the wave ports. The problem with poor grounding can be seen in the
S-parameters. Try to modify this script to add ground vias and eliminate
the resonance.


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.016 seconds)


.. _sphx_glr_download_examples_legacy_pyaedt_integration_04_edb_parametrized_design.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 04_edb_parametrized_design.ipynb <04_edb_parametrized_design.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 04_edb_parametrized_design.py <04_edb_parametrized_design.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
